<resources>
    <!--==== Resources that do not require translation ====-->
    <string name="app_name">sd_playground</string>

    <!--==== Translatable resources ====-->
    <!-- NavGraph Labels-->
    <string name="label_catalog">Catalog</string>
    <string name="label_dashboard">Dashboard</string>
    <string name="label_explore">Explore</string>
    <string name="label_logbook">Logbook</string>
    <string name="label_profile">ProfileFragment</string>
    <string name="label_settings">SettingsFragment</string>
    <string name="label_certification_detail">CertificationDetailFragment</string>
    <string name="label_dive_site_detail">DiveSiteDetailFragment</string>
    <string name="label_wildlife">WildlifeFragment</string>
    <string name="label_logbook_entry">LogbookEntryFragment</string>
    <string name="label_notifications">NotificationsFragment</string>
    <string name="label_weather_detail">WeatherDetailFragment</string>
    <string name="label_qr_code">QRCodeFragment</string>
    <string name="label_explore_detail_filtered">ExploreDetailsFilteredFragment</string>
    <string name="label_scan_certification">ScanCertFragment</string>
    <string name="label_inbox">InboxFragment</string>
    <string name="label_chat">ChatFragment</string>
    <string name="label_saved">SavedFragment</string>
    <string name="label_wildlife_detail">WildlifeDetailFragment</string>
    <string name="label_saved_detail">SavedDetailFragment</string>
    <string name="label_chat_detail">ChatDetailsFragment</string>
    <string name="label_gear_detail">GearProfileDetailFragment</string>

    <!-- Dashboard -->
    <string name="dashboard_welcome">Welcome %1$s!</string>

    <!-- Logbook -->
    <string name="logbook_tab_dives">Dives</string>
    <string name="logbook_tab_wildlife">Wildlife</string>
    <string name="logbook_tab_map">Map</string>
    <string name="logbook_details">%1$d. %2$s</string>

    <!-- Explore -->
    <string name="explore_tab_sites">Sites</string>
    <string name="explore_tab_wildlife">Wildlife</string>
    <string name="explore_tab_buddies">Buddies</string>

    <!-- Profile -->
    <string name="profile_tab_certs">Certs</string>
    <string name="profile_tab_stats">Stats</string>
    <string name="profile_tab_gear">Gear</string>
    <string name="profile_tab_about">About</string>
    <string name="profile_toolbar_dive_count">%1$d\nDives</string>
    <string name="profile_toolbar_buddy_count">%1$d\nBuddies</string>

    <!-- About -->
    <string name="profile_about_causes_heading">Causes %1$s Cares About</string>

    <!-- Stats -->
    <string name="profile_stats_dive_count">%1$d\nTotal Dives</string>
    <string name="profile_stats_country_count">%1$d\nCountries</string>
    <string name="profile_stats_wildlife_count">%1$d\nWildlife Seen</string>
    <string name="profile_stats_certification_count">%1$d\nCertifications</string>
    <string name="profile_stats_max_depth">%1$.2f\nMax Depth</string>
    <string name="profile_stats_max_dive_time">%1$.2f\nMax Dive Time</string>
    <string name="profile_stats_bottom_time">%1$.2f\nBottom Time</string>
    <string name="profile_stats_average_air_consumption">%1$.2f\nAverage Air Consumption</string>

    <!-- Dive Site Detail-->
    <string name="dive_site_rating">%1$.2f (%2$d)</string>

    <!-- QR Code -->
    <string name="qrcode_tab_scan">Scan</string>
    <string name="qrcode_tab_code">My Code</string>

    <!-- Inbox -->
    <string name="inbox_tab_messages">Messages</string>
    <string name="inbox_tab_notifications">Notifications</string>

    <!--==== String plurals and their related prefix / suffix strings ====-->
    <plurals name="dive_count_suffix">
        <item quantity="one" translation_description="Suffix for the text describing how many dives a diver has logged, singular. Not used with an existing prefix.">%d\nDive</item>
        <item quantity="other" translation_description="Suffix for the text describing how many dives a diver has logged, plural. Not used with an existing prefix.">%d\nDives</item>
    </plurals>
    <plurals name="buddy_count_suffix">
        <item quantity="one" translation_description="Suffix for the text describing how many buddies a diver has, singular. Not used with an existing prefix.">%d\nBuddy</item>
        <item quantity="other" translation_description="Suffix for the text describing how many buddies a diver has, plural. Not used with an existing prefix.">%d\nBuddies</item>
    </plurals>

    <!--==== Custom Views ====-->
    <!-- InfoView -->
    <string name="infoview_content_description">An Icon for an InfoView</string>

    <!--==== Accessibility ====-->
    <string name="a11y_wildlife_image" translation_description="Accessibility text for each of the wildlife images shown in RecyclerView Adapters and the 'Wildlife' screens.">Image of wildlife</string>
    <string name="a11y_certification_image" translation_description="Accessibility text for each of the certification images shown in RecyclerView Adapters and the 'Certification' screens.">Image of certification</string>
    <string name="a11y_dive_site_image" translation_description="Accessibility text for each of the dive site images shown in RecyclerView Adapters and the 'Dive Site' screens.">Image of dive site</string>

</resources>